# dory

./: Cargo.toml  README.md
examples/: g1_msm_bench.rs  g2_scalar_mul_bench.rs  miller_loop_bench.rs  multi_pairing_bench.rs
sage/: wtf  wtf2.py
src/: curve.rs  lib.rs  profiler.rs
src/core/: builder.rs  inner_product.rs  interactive_protocol.rs  messages.rs  mod.rs  offload.rs  recursion_prelude.rs  setup.rs  state.rs
src/primitives/: arithmetic.rs  poly.rs
src/vmv/: commit.rs  evaluate.rs  vmv_state.rs
tests/: evaluation_proof.rs  inner_product.rs  pcs.rs  recursion_offload.rs  soundness_ip.rs  soundness_pcs.rs  soundness_scalar_product.rs  soundness_vmv.rs
